--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ var chart = new CanvasJS.Chart("chartContainer", {
 	}]
 });
 
-var xVal = 0;
+var xVal = new Date();
 var yVal = 100; 
 var updateInterval = 1000;
 var dataLength = 1000; // number of dataPoints visible at any point
@@ -51,8 +51,9 @@ var updateChart = function (count) {
 	$.getJSON(
 			"https://api.coindesk.com/v1/bpi/currentprice/inr.json",
 			function(data) {
+				var xVal = new Date();
 				dps.push({
-					x: xVal,
+					x: new Date(),
 					y: data.bpi.INR.rate_float
 				});
 
@@ -63,7 +64,7 @@ var updateChart = function (count) {
 				errorThrown) { 
 				alert("error occurred!");
 			});
-	xVal ++;
+
 	if (dps.length > dataLength) {
 		dps.shift();
 	}
